<resources>
    <string name="app_name">ProjectInsplayJava</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="INSPLAY">INSPLAY</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started</string>
    <string name="header_1">Selamat Datang</string>
    <string name="paragrap_1">Selamat datang di applikasi INSPLAY</string>
    <string name="line_2">Insplay</string>
    <string name="line_3">Nikmati Music favoritmu dengan kami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_btn_description">Bagian gambar</string>

</resources>